# TodoWebApp

./: .cache_ggshield  .gitignore  README.md
.github/workflows/: codeql.yml  pylint.yml
backend/: .gitignore  astroserver.ts  dbreader.py  main.py  manage.py  pyproject.toml  requirements.txt  server.ts  site.db
backend/TaskWebappBackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/flaskapi/: __init__.py  auth.py  endpoints.py  models.py  usermail.py
backend/instance/: site.db
backend/todoapi/: __init__.py  endpoints.py
backend/todoapi/auth/: __init__.py  utils.py
backend/todoapi/orm/: __init__.py  crud.py  models.py  schema.py
frontend/: .dockerignore  astro.config.mjs  dockerfile  main.ts  package.json  pnpm-lock.yaml
frontend/src/components/: Card.astro  Headbar.svelte  Login.svelte
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
